<resources>

    <string name="app_name">Share Your Dreams</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Share Your Dreams</string>
    <string name="counter_dreams">You saved {0} dreams</string>
    <string name="counter_nightmares">You saved {0} nightmares</string>
    <string name="counter_global_dreams">{0} dreams have been saved</string>
    <string name="counter_global_nightmares">{0} nightmares have been saved</string>
    <string name="dream_description">Describe your dream to share it</string>
    <string name="nightmare_description">Describe your nightmare to share it</string>
    <string name="cancel">Cancel</string>
    <string name="upload_wait_title">Saving</string>
    <string name="upload_wait_desc">Please, wait while we save your dreams...</string>
	<string name="empty_database">You have not saved any dream yet, do not let you forget them</string>
	<string name="dream">Dream</string>
	<string name="nightmare">Nightmare</string>
	<string name="close">Close</string>
    <string name="connection_error">There was a connection problem. Try it more later please.</string>
    <string name="charactersLeft">Characters left</string>
    <string name="send">Send</string>
    <string name="about">About</string>
    <string name="spell_text0">YES</string>
    <string name="spell_text1">NO</string>
    <string name="spell_text2">NOT YET</string>
    <string name="spell_text3">MAYBE</string>
    <string name="spell_info">Touch to start</string>
    <string name="spell_title">Think about your dream while launching the spell of divination to see if it will comply.</string>
    
    <string name="about_app_developed_by">app developed by</string>
    <string name="about_app_developed_by_author">DEVERGENCE</string>
    <string name="about_app_description">Share Your Dreams is an app developed by DEVERGENCE and powered by topoos: the context aware applications platform</string>
    <string name="about_contact">Contact us</string>
    <string name="about_contact_web">www.devergence.com</string>
    <string name="about_contact_email">contacto@devergence.com</string>
    <string name="about_contact_fb">on Facebook</string>
    <string name="about_contact_fb_link">www.facebook.com/devergence.studios</string>
    <string name="about_contact_tw">on Twitter</string>
    <string name="about_contact_tw_link">\ @devergence_std</string>
    <string name="about_contract">powered by www.topoos.com</string>
	
</resources>