<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        style="@style/header_container"
        android:visibility="gone" >
        
    <TextView
        android:id="@+id/counter_dreams"
        android:text="@string/counter_dreams"
        style="@style/header_textline"/>

    <TextView
        android:id="@+id/counter_nightmares"
        android:text="@string/counter_nightmares"
        style="@style/header_textline" />
        
    
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ads"
        android:layout_below="@+id/header"
        android:listSelector="@android:color/transparent" 
		android:cacheColorHint="@android:color/transparent"
		android:drawSelectorOnTop="false"
        android:choiceMode="none" >
    </ListView>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/empty_database"
        android:textColor="@color/text_new_light" >
    </TextView>

    <LinearLayout
        android:id="@+id/ads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <include layout="@layout/ads_item" />
    </LinearLayout>

</RelativeLayout>